SQl good. add Sepulc Page, Shop page etc

--- a/src/main/resources/123123templates/1index.html
+++ b/src/main/resources/123123templates/1index.html
@@ -127,7 +127,7 @@
                       </div>
                       <div class="Card-cost"><span class="Card-price" th:text="${sepulc.price}">₽210.00</span>
                       </div>
-                      <div class="ImagePath"><span class="Path" th:text="${sepulc.imagePath}">SomePath</span>
+                      <div class="image_path"><span class="Path" th:text="${sepulc.image_path}">SomePath</span>
                       </div>
                     </div>
                   </div>
@@ -276,7 +276,7 @@
                       </div>
                       <div class="Card-cost"><span class="Card-price" th:text="${sepulc.price}">₽210.00</span>
                       </div>
-                      <div class="ImagePath"><span class="Path" th:text="${sepulc.imagePath}">SomePath</span>
+                      <div class="ImagePath"><span class="Path" th:text="${sepulc.image_path}">SomePath</span>
                       </div>
                     </div>
                   </div>
