--- a/src/main/resources/spring-frontend/signin.html
+++ b/src/main/resources/spring-frontend/signin.html
@@ -9,7 +9,7 @@
 <!--[if IE 9]>
 <html class="ie9" lang="ru">
 <![endif]-->
-<!--[if gt IE 9]><!--> <html lang="ru"> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <html lang="ru" xmlns:th="http://www.thymeleaf.org"> <!--<![endif]-->
 <head>
   <title>Тут название страницы написать</title>
   <meta name="description" content="Описание страницы">
@@ -28,6 +28,12 @@
   <link rel="stylesheet" href="/assets/css/extra.min.css?v=27449092"><!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script defer src="/assets/js/scripts.min.js?v=27449092"></script>
+
+
+
+
+  <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
+  <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body class="Site">
   <!--if lt IE 8
@@ -105,6 +111,9 @@
             <div class="Login-step">
               <div class="form-group">
                 <label class="form-label Login-title">Введите e-mail или телефон
+
+                  <br>
+                  <span th:if="${regOk}">Регистрация прошла успешно. Поздравляю.</span>
                 </label>
               </div>
               <div class="form-group">
@@ -156,7 +165,7 @@
                 </button>
               </div>
             </div>
-            <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html">Зарегистрироваться</a>
+            <div class="form-group form-group_center"><a class="Login-reg" href="/signup.html" th:href="@{/signup}">Зарегистрироваться</a>
             </div>
           </div>
         </form>
